# ccpp-robot

./: README.md
ccpp_ws/ccpp_ws/src/doc/full_coverage_path_planner/: CMakeLists.txt
ccpp_ws/ccpp_ws/src/robot_ccpp/launch/: robot_ccpp.launch.py  robot_map_server.launch.py
ccpp_ws/ccpp_ws/src/robot_ccpp/params/: robot_ccpp.yaml
ccpp_ws/ccpp_ws/src/robot_ccpp/rviz2/: rviz2_ccpp.rviz
ccpp_ws/ccpp_ws/src/robot_ccpp/scripts/: PathPlanningNode.py
ccpp_ws/ccpp_ws/src/robot_ccpp/src/: CleaningPathPlanner.cpp  PathPlanningNode.cpp  next_goal.cpp
robot_ccpp/: CMakeLists.txt  package.xml
robot_ccpp/doc/clean_robot/: CMakeLists.txt
robot_ccpp/doc/clean_robot/src/: CleaningPathPlanner.h
robot_ccpp/maps/: map.yaml
robot_ccpp/params/: robot_ccpp.yaml
robot_ccpp/robot_ccpp/include/robot_ccpp/: CleaningPathPlanner.h
robot_ccpp/robot_ccpp/launch/: robot.launch.py
robot_ccpp/robot_ccpp/src/: CleaningPathPlanner.cpp  next_goal.cpp
robot_ccpp/scripts/: CleaningPathPlanner.py  simulate_tf2_pub.py
robot_ccpp/src/: CleaningPathPlanner.cpp  next_goal.cpp
